--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-store",
+  "name": "react-native-store-wrapper",
   "version": "0.4.2",
   "description": "A simple database base on react-native AsyncStorage.",
   "main": "./lib/index.js",
